minor fixes on mobile view

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -1,9 +1,3 @@
-/*!
- * Start Bootstrap - New Age v5.0.0 (https://startbootstrap.com/template-overviews/new-age)
- * Copyright 2013-2018 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-new-age/blob/master/LICENSE)
- */
-
 html,
 body {
   width: 100%;
@@ -204,11 +198,7 @@ header.masthead .device-container .screen img {
 
 section.market {
   position: relative;
-  height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/paratroopers2.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  min-height: 100vh;
   padding: 110px 0;
 }
 
@@ -445,6 +435,29 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
   .hlink {
     font-size: 80px;
   }
+}
+
+@media(min-width:768px) {
+  section.market {
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/paratroopers2.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
+@media(max-width:768px) {
+  section.market {
+    background: #222222;
+  }
+}
+
+@media (max-width:768px){
+ img{
+   width: 250px;
+ }
+
+ 
 }
 
 .profile-picture  {
